...
            android:hint="Full Name"
            android:inputType="textPersonName"
            android:text="@={viewmodel.name}"
            />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/form_input"
            android:ems="10"
...
